include $(top_srcdir)/gnome-doc-utils.make

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pl ru sl sr sr@latin sv tr zh_CN

DOC_MODULE = glines

DOC_ENTITIES = \
	legal.xml

DOC_FIGURES = \
	figures/glines-gameover.png \
	figures/glines-startgame.png \
	figures/preferences.png

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
