include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = glines
DOC_INCLUDES = \
	legal.xml

DOC_FIGURES = \
	figures/color-balls.png		\
	figures/color-shapes.png	\
	figures/glines-demo.ogv		\
	figures/glines-gameover.png	\
	figures/large.png			\
	figures/logo32.png			\
	figures/logo.png			\
	figures/medium.png			\
	figures/pickcolor.png		\
	figures/small.png

DOC_PAGES = \
	bug-filing.page			\
	change-board-size.page	\
	change-theme.page		\
	commandline.page		\
	develop.page			\
	documentation.page		\
	fast-moves.page			\
	index.page				\
	legal.xml				\
	license.page			\
	play.page				\
	rules.page				\
	scores.page				\
	shortcuts.page			\
	strategy.page			\
	translate.page

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pl ru sl sr sr@latin sv tr zh_CN

-include $(top_srcdir)/git.mk
