@YELP_HELP_RULES@
HELP_ID = five-or-more

HELP_MEDIA = \
	figures/color-balls.png		\
	figures/color-shapes.png	\
	figures/diagonal.png		\
	figures/glines-demo.ogv		\
	figures/glines-gameover.png	\
	figures/horizontal.png		\
	figures/large.png		\
	figures/logo32.png		\
	figures/logo.png		\
	figures/medium.png		\
	figures/pickcolor.png		\
	figures/small.png		\
	figures/vertical.png

HELP_FILES = \
	bug-filing.page			\
	change-board-size.page		\
	change-theme.page		\
	develop.page			\
	documentation.page		\
	fast-moves.page			\
	index.page			\
	legal.xml			\
	license.page			\
	play.page			\
	rules.page			\
	scores.page			\
	shortcuts.page			\
	strategy.page			\
	translate.page

HELP_LINGUAS = ca cs de el en_GB es eu fr gl hu it ja oc pt_BR ru sl sr sr@latin sv tr zh_CN

-include $(top_srcdir)/git.mk
