five_or_more_help_pages = [
  'bug-filing.page',
  'change-board-size.page',
  'change-theme.page',
  'develop.page',
  'documentation.page',
  'index.page',
  'legal.xml',
  'license.page',
  'play.page',
  'rules.page',
  'scores.page',
  'shortcuts.page',
  'strategy.page',
  'translate.page'
]

five_or_more_help_media = [
  'figures/diagonal.png',
  'figures/glines-demo.ogv',
  'figures/glines-gameover.png',
  'figures/horizontal.png',
  'figures/large.png',
  'figures/logo.png',
  'figures/logo32.png',
  'figures/medium.png',
  'figures/small.png',
  'figures/vertical.png'
]

gnome.yelp(meson.project_name(),
  sources: five_or_more_help_pages,
  media: five_or_more_help_media
)
